# BAC0

./: #.travis.yml#  .coverage  .env~  .flake8  .gitignore  .oldtravis.yml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  PCV-2-005.db  README.md  README.rst  README.txt  contributors.txt  files.txt  mypy.ini  pyproject.toml  requirements-mypy.txt  requirements.txt  setup.py
BAC0/: __init__.py  infos.py
Jupyter/: BAC0.ipynb
bacnetScript/: bacnetBasicApp.py  bacnetDiscoverPoints.py  bacnetRead.py  bacnetScript.py  bacnetScriptApplication.py  bacnetWhoisIAm.py  bacnetWrite.py
bacnetScript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doc/: Makefile  README.rst  conf.py  make.bat  modules.rst
samples/: excel_from_discovered_devices.py
tests/: TestBokehRendering.py  TestDevice.py  TestReadProperty.py  TestReadPropertyMultiple.py  TestReadWriteScript.py  TestSimulation.py  TestWriteProperty.py  conftest.py  device_a.json  first.py  manual_test.py  manual_test_cov.py  manual_test_create_device.py  manual_test_create_objects.py  manual_test_history_sql.py  manual_test_rpm.ipynb  manual_test_schedule_datatype.py  manualtest_cov.py  old_BAC0_web.py  pytest_example.py  test_0BacpypesVersion.py  test_1AddressesTypes.py  test_AsyncRead.py  test_BAC0_async.py  test_BAC0_connect.py  test_BAC0_lite copy.py  test_BAC0_lite.py  test_BAC0_web.py  test_BacpypesVersion.py  test_Read.py  test_ReadProperty.py  test_ReadPropertyMultiple.py  test_SaveToSQL.py  test_Segmentation_30objects.py  test_Simulation.py  test_WhoHasIHave.py  test_WithFakeDevice.py  test_Write.py  (+7 more)
(+260 files in other folders)
